--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "format": "prettier --write src/**/*.ts"
   },
   "dependencies": {
-    "stripe": "^14.0.0",
-    "hono": "^4.0.0"
+    "@maatara/core-pqc": "^0.2.3",
+    "@maatara/core-pqc-wasm": "^0.2.0",
+    "hono": "^4.0.0",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "wrangler": "^3.20.0",
-    "vitest": "^1.0.0",
-    "eslint": "^8.55.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
-    "prettier": "^3.1.0"
+    "eslint": "^8.55.0",
+    "prettier": "^3.1.0",
+    "typescript": "^5.3.0",
+    "vitest": "^1.0.0",
+    "wrangler": "^3.20.0"
   },
   "keywords": [
     "nft",
