feat: Add Veritas blockchain integration for asset and user management
- Updated package.json to set module type.
- Enhanced asset creation and transfer handlers to interact with the Veritas blockchain.
- Implemented blockchain initialization and transaction addition methods in blockchain utility.
- Added user registration to blockchain during account activation.
- Deprecated MaataraClient's addToChain and getChainBlock methods in favor of VeritasBlockchain.
- Introduced new CLI tool for admin account management and environment setup.
- Created PowerShell scripts for user account creation and production secrets setup.
- Added minimal setup script for essential secrets configuration.
- Updated environment variable templates and production setup instructions.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "veritas-documents",
   "version": "1.0.0",
   "description": "NFT-based legal document storage with post-quantum cryptography",
+  "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "dev": "wrangler dev",
