feat: Implement VDC Integration and Update Auth Handler
- Added VDC integration to the auth handler, replacing VeritasChain functions.
- Updated user registration to include system signature and store transactions in VDC pending pool.
- Introduced new endpoints for VDC management, including stats retrieval, genesis block initialization, and manual block mining.
- Created scripts for generating system master keys and initializing the genesis block.
- Developed a markdown documentation handler to serve various documentation files.
- Added type declarations for markdown file imports.

--- a/.gitignore
+++ b/.gitignore
@@ -90,4 +90,8 @@ Thumbs.db
 
 # Temporary files
 tmp/
-temp/
+temp/# VDC System Master Keys (NEVER COMMIT THESE!)
+system-master-keys.json
+.env.system-keys
+setup-cloudflare-secrets.sh
+setup-cloudflare-secrets.ps1
