--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,12 @@ name = "veritas-docs"
 main = "src/index.ts"
 compatibility_date = "2024-01-01"
 
+# Configure esbuild to load markdown files as text
+[[rules]]
+type = "Text"
+globs = ["**/*.md"]
+fallthrough = true
+
 [env.production.vars]
 ENVIRONMENT = "production"
 MAATARA_API_BASE = "https://maatara-core-worker.rme-6e5.workers.dev"
