--- a/wrangler.toml
+++ b/wrangler.toml
@@ -21,9 +21,17 @@ ENVIRONMENT = "staging"
 binding = "VERITAS_KV"
 id = "9f0ea31309cd44cab7bfe3569e16aa45"
 
+[[env.production.r2_buckets]]
+binding = "VDC_STORAGE"
+bucket_name = "veritas-docs-production-storage"
+
 [[env.staging.kv_namespaces]]
 binding = "VERITAS_KV"
 id = "your-staging-kv-namespace-id"
+
+[[env.staging.r2_buckets]]
+binding = "VDC_STORAGE"
+bucket_name = "veritas-docs-staging-storage"
 
 [vars]
 ENVIRONMENT = "development"
@@ -36,6 +44,11 @@ IPFS_GATEWAY_URL = "https://cloudflare-ipfs.com"
 binding = "VERITAS_KV"
 id = "77a8b18c45f341b7aa1b91de1dc8a55e"
 preview_id = "f280a31ef23b4d7cb29d5ac314457674"
+
+[[r2_buckets]]
+binding = "VDC_STORAGE"
+bucket_name = "veritas-docs-dev-storage"
+preview_bucket_name = "veritas-docs-dev-storage-preview"
 
 
 # Add your secrets using: wrangler secret put SECRET_NAME
