feat: Add scripts for downloading VDC blocks and uploading frontend assets to KV
- Implemented `download-all-blocks.ps1` script to download and verify VDC blocks across KV, R2, and IPFS, saving them to a specified directory and reporting consistency.
- Created `upload-frontend.js` script to upload the frontend bundle and PQC WASM to KV, ensuring the Worker can serve them at the appropriate paths.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "npm run build:frontend && npm run upload-docs && wrangler deploy",
+    "deploy": "npm run build:frontend && npm run upload-docs && npm run upload-frontend && wrangler deploy",
     "build": "tsc",
     "build:frontend": "node esbuild.frontend.js",
+    "upload-frontend": "node scripts/upload-frontend.js",
     "upload-docs": "node scripts/upload-docs.js",
     "test": "vitest",
     "lint": "eslint src/**/*.ts",
