--- a/wrangler.toml
+++ b/wrangler.toml
@@ -24,6 +24,27 @@ binding = "VDC_STORAGE"
 bucket_name = "veritas-docs-production-storage"
 
 
+[env.production]
+name = "veritas-docs-production"
+
+[env.production.vars]
+ENVIRONMENT = "production"
+MAATARA_API_BASE = "https://maatara-core-worker.rme-6e5.workers.dev"
+ETHEREUM_RPC_URL = "https://cloudflare-eth.com/v1/mainnet"
+IPFS_GATEWAY_URL = "https://cloudflare-ipfs.com"
+AUTO_MINE_ON_PAYMENT = "true"
+PRICE_CENTS = "2500"
+PRICE_CURRENCY = "aud"
+
+[[env.production.kv_namespaces]]
+binding = "VERITAS_KV"
+id = "9f0ea31309cd44cab7bfe3569e16aa45"
+
+[[env.production.r2_buckets]]
+binding = "VDC_STORAGE"
+bucket_name = "veritas-docs-production-storage"
+
+
 # Add your secrets using: wrangler secret put SECRET_NAME
 # STRIPE_SECRET_KEY
 # STRIPE_WEBHOOK_SECRET
