feat: Enhance IPFS integration and asset management
- Removed unused documentR2Key from asset creation payload.
- Added HTML escaping utility for safe rendering of user-generated content.
- Updated asset upload process to handle binary files and encode them in base64 for encryption.
- Introduced a new IPFS warming feature to improve content retrieval via Cloudflare and Pinata gateways.
- Enhanced asset viewing functionality with detailed information and decryption options.
- Updated transaction size limits for user registrations to accommodate larger payloads.
- Improved error handling and logging for transaction verification.
- Added support for optional Pinata gateway in IPFS client configuration.
- Refactored IPFS upload function to allow custom naming for pinned content.
- Updated storage manager to derive friendly pin names based on asset type.
- Configured a dedicated Pinata gateway URL in the environment settings.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,7 @@ ENVIRONMENT = "production"
 MAATARA_API_BASE = "https://maatara-core-worker.rme-6e5.workers.dev"
 ETHEREUM_RPC_URL = "https://cloudflare-eth.com/v1/mainnet"
 IPFS_GATEWAY_URL = "https://cloudflare-ipfs.com"
+PINATA_GATEWAY_URL = "https://green-advisory-crane-736.mypinata.cloud"
 
 [[kv_namespaces]]
 binding = "VERITAS_KV"
@@ -32,6 +33,7 @@ ENVIRONMENT = "production"
 MAATARA_API_BASE = "https://maatara-core-worker.rme-6e5.workers.dev"
 ETHEREUM_RPC_URL = "https://cloudflare-eth.com/v1/mainnet"
 IPFS_GATEWAY_URL = "https://cloudflare-ipfs.com"
+PINATA_GATEWAY_URL = "https://green-advisory-crane-736.mypinata.cloud"
 AUTO_MINE_ON_PAYMENT = "true"
 PRICE_CENTS = "2500"
 PRICE_CURRENCY = "aud"
