--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@maatara/core-pqc": "^0.2.3",
     "@maatara/core-pqc-wasm": "^0.2.0",
+    "viem": "^2.12.0",
     "hono": "^4.0.0",
     "stripe": "^14.0.0"
   },
